--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ sourceCompatibility = 17
 targetCompatibility = 17
 
 group "io.kestra.plugin"
-description 'Plugin template for Kestra'
+description 'Malloy CLI plugin for Kestra'
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
@@ -52,9 +52,7 @@ dependencies {
 
     // kestra
     compileOnly group: "io.kestra", name: "core", version: kestraVersion
-
-    // libs included in the final jar
-    api group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+    implementation group: "io.kestra.plugin", name: "plugin-script", version: kestraVersion
 }
 
 
@@ -110,8 +108,8 @@ jar {
     manifest {
         attributes(
                 "X-Kestra-Name": project.name,
-                "X-Kestra-Title": "Template",
-                "X-Kestra-Group": project.group + ".templates",
+                "X-Kestra-Title": "Malloy CLI",
+                "X-Kestra-Group": project.group + ".malloy",
                 "X-Kestra-Description": project.description,
                 "X-Kestra-Version": project.version
         )
@@ -121,8 +119,8 @@ jar {
 pom {
     developers {
         developer {
-            id "tchiotludo"
-            name "Ludovic Dehon"
+            id "Ben8t"
+            name "Benoit Pimpaud"
         }
     }
 }
